# neural-fcasa

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ruff.yaml
neural_fcasa/: dereverberate.py  nn.py  separate.py
neural_fcasa/callbacks/: cyclic_annealer.py  visualizer.py
neural_fcasa/datamodules/: hdf5_wavact_datamodule.py
neural_fcasa/datasets/: hdf5_wavact_dataset.py
neural_fcasa/decoders/: res_lin_decoder.py
neural_fcasa/diagonalizers/: iss_nrmxt_diagonalizer.py
neural_fcasa/encoders/: resepformer_encoder.py
neural_fcasa/tasks/: avi_scl_allsort_task.py
neural_fcasa/utils/: distributions.py  separator.py
recipes/ami/models/neural-fcasa/: train.sh
recipes/ami/scripts/: 1_split_data.py  2_split_activations.py  3_dereverberate.py  4_make_dataset_chunk.py  config.py  job_template.sh
recipes/neural-fcasa/: config.yaml
